--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react": "*",
     "react-native": "*",
     "react-native-svg": "*"
-  }
+  },
+  "dependencies": {
+    "humps": "^2.0.1"
+  }     
 }
